[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/art/menu/logo.png" type="Texture" id=2]
[ext_resource path="res://assets/art/menu/inactiveButton.png" type="Texture" id=3]
[ext_resource path="res://assets/art/menu/hoverButton.png" type="Texture" id=4]
[ext_resource path="res://assets/art/menu/pressedButton.png" type="Texture" id=5]
[ext_resource path="res://assets/art/menu/activeButton.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/MenuFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/art/menu/frame.png" type="Texture" id=8]
[ext_resource path="res://assets/art/menu/burst.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/MenuFont2x.tres" type="DynamicFont" id=10]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BG:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.8, 0.8, 0.8, 1 )
position = Vector2( 480, 240 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )

[node name="Frame" type="Sprite" parent="."]
modulate = Color( 0.956863, 0.956863, 0.956863, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
centered = false

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ButtonExit" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 368.0
margin_right = 128.0
margin_bottom = 416.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Main/ButtonExit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Exit[/center]"
text = "Exit"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonSettings" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 304.0
margin_right = 128.0
margin_bottom = 352.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )

[node name="Text" type="RichTextLabel" parent="Main/ButtonSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -4.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Settings[/center]"
text = "Settings"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonPlay" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 240.0
margin_right = 128.0
margin_bottom = 288.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Main/ButtonPlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -4.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Play[/center]"
text = "Play"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonContinue" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 176.0
margin_right = 128.0
margin_bottom = 224.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Main/ButtonContinue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -4.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Continue[/center]"
text = "Continue"
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonMusic" type="TextureButton" parent="Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 224.0
margin_right = 128.0
margin_bottom = 272.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Settings/ButtonMusic"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -4.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Music: On[/center]"
text = "Music: On"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonBack" type="TextureButton" parent="Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 368.0
margin_right = 128.0
margin_bottom = 416.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Settings/ButtonBack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.0
margin_bottom = -4.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Back[/center]"
text = "Back"
__meta__ = {
"_edit_lock_": true
}

[node name="Copyright" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_bottom = 2.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]©2020 by NimbleBeasts [color=#34859d]`[/color]NimbleBeasts [color=#9d303b]¥[/color]NimbleBeasts[/center]"
text = "©2020 by NimbleBeasts `NimbleBeasts ¥NimbleBeasts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_right = -4.0
margin_bottom = 16.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[right]Version[/right]"
text = "Version"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 480, 104 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
[connection signal="button_up" from="Main/ButtonExit" to="." method="_on_ButtonExit_button_up"]
[connection signal="button_up" from="Main/ButtonSettings" to="." method="_on_ButtonSettings_button_up"]
[connection signal="button_up" from="Main/ButtonPlay" to="." method="_on_ButtonPlay_button_up"]
[connection signal="button_up" from="Main/ButtonContinue" to="." method="_on_ButtonContinue_button_up"]
[connection signal="button_up" from="Settings/ButtonMusic" to="." method="_on_ButtonMusic_button_up"]
[connection signal="button_up" from="Settings/ButtonBack" to="." method="_on_ButtonBack_button_up"]
